samples/_failures_safe/1761631733_714f8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_433eb063.c: In function ‘main’:
./samples/SAFE/__tmp_433eb063.c:163:5: error: expected expression at end of input
  163 |     for (
      |     ^~~
./samples/SAFE/__tmp_433eb063.c:163:5: error: expected declaration or statement at end of input
